# ProjecteWeb

./: .gitignore  Decisions_Disseny_Web3.0.md  Dockerfile  LICENSE  README.md  READMEd2.md  behave.ini  db.sqlite3  docker-compose.yml  eliminacio_reviews.md  metadata.yaml  notes.md  pyproject.toml  readme_for_pdf.md  temp.tex  web_data_backup.json
ProjecteWeb/: settings.py  urls.py
features/: README.md  add_reviews.feature  add_to_havelist.feature  add_to_wishlist.feature  behave.ini  book_card_havelist.feature  book_card_wishlist.feature  book_exchange.feature  delete_reviews.feature  environment.py  have_list.feature  profile.feature  settings.py  update_reviews.feature  wishlist.feature
features/steps/: auth_steps.py  authentication.py  book_steps.py  have_list_steps.py  wishlist_steps.py
web/: admin.py  forms.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_add_status_points_to_have.py  0002_add_status_to_have.py  0002_book_rename_created_at_user_joined_date_and_more.py  0003_alter_exchange_book2.py  0003_book_title_alter_user_userid.py  0003_sync_have_model.py  0004_alter_user_points.py  0004_user_auth_user.py  0005_remove_saledonation_user_saledonation_user1_and_more.py  0005_rename_tengo_have_rename_quiero_want_and_more.py  0006_review_rating.py
web/static/: style.css
web/templates/: base.html  book-entry.html  books.html  buy_form.html  edit_profile.html  have_form.html  login.html  profile.html  register.html  review_confirm_delete.html  review_form.html  sale_success.html  trade_form.html  trade_success.html  trending.html  (+1 more)
(+6 files in other folders)
