[project]
name = "djangoproject3"
version = "0.1.0"
description = ""
authors = [
    {name = "HP",email = "krisoc123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "Pillow (>=10.0.0,<11.0.0)",
    "behave (>=1.2.6,<2.0.0)",
    "behave-django (>=1.4.0,<2.0.0)",
    "selenium (>=4.10.0,<5.0.0)",
    "splinter (>=0.19.0,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.behave]
paths = ["features/"]
show_timings = true
stdout_capture = false
stderr_capture = false
